Bug 398157: Fix nscoord_MAX arithmetic using NSCoordSaturatingSubtract. r=roc sr=roc a=roc